syntax = "proto3";
package Cratis.Chronicle.Contracts.Jobs;
import "google/protobuf/empty.proto";
import "protobuf-net/bcl.proto"; // schema for protobuf-net's handling of core .NET types

message DeleteJob {
   string EventStore = 1;
   string Namespace = 2;
   .bcl.Guid JobId = 3; // default value could not be applied: 00000000-0000-0000-0000-000000000000
}
message GetJobRequest {
   string EventStore = 1;
   string Namespace = 2;
   .bcl.Guid JobId = 3; // default value could not be applied: 00000000-0000-0000-0000-000000000000
}
message GetJobStepsRequest {
   string EventStore = 1;
   string Namespace = 2;
   .bcl.Guid JobId = 3; // default value could not be applied: 00000000-0000-0000-0000-000000000000
}
message GetJobsRequest {
   string EventStore = 1;
   string Namespace = 2;
}
message IEnumerable_Job {
   repeated Job items = 1;
}
message IEnumerable_JobStep {
   repeated JobStep items = 1;
}
message Job {
   .bcl.Guid Id = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   string Details = 2;
   string Type = 3;
   JobStatus Status = 4;
   SerializableDateTimeOffset Created = 5;
   repeated JobStatusChanged StatusChanges = 6;
   JobProgress Progress = 7;
}
enum JobError {
   ZERO = 0; // proto3 requires a zero value as the first item (it can be named anything)
   NotFound = 1;
   TypeIsNotAJobStateType = 2;
   TypeIsNotAssociatedWithAJobType = 3;
}
message JobProgress {
   int32 TotalSteps = 1;
   int32 SuccessfulSteps = 2;
   int32 FailedSteps = 3;
   int32 StoppedSteps = 4;
   bool IsCompleted = 5;
   bool IsStopped = 6;
   string Message = 7;
}
enum JobStatus {
   None = 0;
   PreparingJob = 1;
   PreparingSteps = 2;
   StartingSteps = 3;
   Running = 4;
   CompletedSuccessfully = 5;
   CompletedWithFailures = 6;
   Stopped = 7;
   Failed = 8;
   Removing = 9;
}
message JobStatusChanged {
   JobStatus Status = 1;
   SerializableDateTimeOffset Occurred = 2;
   repeated string ExceptionMessages = 3;
   string ExceptionStackTrace = 4;
}
message JobStep {
   .bcl.Guid Id = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   string Type = 2;
   string Name = 3;
   JobStepStatus Status = 4;
   repeated JobStepStatusChanged StatusChanges = 5;
   JobStepProgress Progress = 6;
}
message JobStepProgress {
   int32 Percentage = 1;
   string Message = 2;
}
enum JobStepStatus {
   Unknown = 0;
   Scheduled = 1;
   Running = 2;
   CompletedSuccessfully = 3;
   CompletedWithFailure = 4;
   Stopped = 5;
   Failed = 6;
   Removing = 7;
}
message JobStepStatusChanged {
   JobStepStatus Status = 1;
   SerializableDateTimeOffset Occurred = 2;
   repeated string ExceptionMessages = 3;
   string ExceptionStackTrace = 4;
}
message OneOf_Job_JobError {
   Job Value0 = 1;
   JobError Value1 = 2;
}
message ResumeJob {
   string EventStore = 1;
   string Namespace = 2;
   .bcl.Guid JobId = 3; // default value could not be applied: 00000000-0000-0000-0000-000000000000
}
message SerializableDateTimeOffset {
   int64 Ticks = 1;
   double OffsetMinutes = 2;
}
message StopJob {
   string EventStore = 1;
   string Namespace = 2;
   .bcl.Guid JobId = 3; // default value could not be applied: 00000000-0000-0000-0000-000000000000
}
service Jobs {
   rpc Delete (DeleteJob) returns (.google.protobuf.Empty);
   rpc GetJob (GetJobRequest) returns (OneOf_Job_JobError);
   rpc GetJobs (GetJobsRequest) returns (IEnumerable_Job);
   rpc GetJobSteps (GetJobStepsRequest) returns (IEnumerable_JobStep);
   rpc ObserveJobs (GetJobsRequest) returns (stream IEnumerable_Job);
   rpc Resume (ResumeJob) returns (.google.protobuf.Empty);
   rpc Stop (StopJob) returns (.google.protobuf.Empty);
}
